changing overflow issue

--- a/src/styles/config/_globals.scss
+++ b/src/styles/config/_globals.scss
@@ -56,3 +56,8 @@ body {
     height: 8px;
   }
 }
+
+.app {
+  max-width: 100vw;
+  overflow-x: hidden;
+}
