--- a/src/styles/pages/_contact.scss
+++ b/src/styles/pages/_contact.scss
@@ -8,7 +8,7 @@
     visibility: hidden;
     opacity: 0;
     transform: translateX(+300vw);
-    transition: all 2s ease-in;
+    transition: all 1.2s ease-in;
     font-weight: bold;
     letter-spacing: 2px;
 
